contrast fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -81,6 +81,7 @@ h4 {
 ul {
     list-style: none;
     margin-left: -20px;
+    color: black;
 }
 
 /*  Footer  */
